Fix: adjusted scrollbar width to prevent overlapping

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -12,6 +12,11 @@ html, body {
     background-color: #F7F7F7;
 }
 
+
+html {
+    scrollbar-width: thin;
+}
+
 /* Navigation Bar */
 
 .nav-bar {
